test/spec_vectors/memory_copy64/fail/module_48.wat
(module (memory i64 1 1) (func (export "testfn") (memory.copy (f32.const 10) (f64.const 20) (i32.const 30))))